--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,23 @@
+#definicion del puerto del servidor
 server.port=8090
+
+#para definir el formato de la fecha/hora en la consola
+logging.pattern.dateformat=hh:mm
+
+#Eliminar los mensajes invasivos de Spring
+spring.main.banner-mode=off
+
+#deshabilitar cache del servidor
+spring.thymeleaf.cache=false
+
+#MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/techshop?usetimezone=true&serverTimezone=UTC
+spring.datasource.username=usuario_prueba
+spring.datasource.password=Usuar1o_Clave.
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+#mostrar informacion en el log
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.sql=debug
+logging.level.org.type.descriptor.sql.BasicBinder=TRACE
